hw 5 done func 3 4

--- a/05-work-with-array2/index.html
+++ b/05-work-with-array2/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <p>Func 1: An array of random integers <button onclick="getRandomArray(+prompt('Enter a length', '5'),+prompt('Enter a min number', '1'),+prompt('Enter a max number', '9'))">start function</button></p>
-  <p>Func 1: Сalculate mode <button onclick="getModa(prompt('Enter numbers by space', '5 2 5 4 6 9 8 8 12 12 45 8 5'))">start function</button></p>
+	<p>Func 2: Сalculate mode <button onclick="getModa(prompt('Enter numbers by space', '5 2 5 4 6 9 8 8 12 12 45 8 5'))">start function</button></p>
+  <p>Func 3: Considers the arithmetic mean of all arguments passed to it <button onclick="getAverage(prompt('Enter numbers by space', '1 2 3 4'))">start function</button></p>
+  <p>Func 4: Considers the median of all arguments passed to it <button onclick="getMedian(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
 	<div class="result"></div>
 	<script src="./js/index.js"></script>
 </body>
