--- a/05-work-with-array2/index.html
+++ b/05-work-with-array2/index.html
@@ -11,6 +11,14 @@
 	<p>Func 2: Сalculate mode <button onclick="getModa(prompt('Enter numbers by space', '5 2 5 4 6 9 8 8 12 12 45 8 5'))">start function</button></p>
   <p>Func 3: Considers the arithmetic mean of all arguments passed to it <button onclick="getAverage(prompt('Enter numbers by space', '1 2 3 4'))">start function</button></p>
   <p>Func 4: Considers the median of all arguments passed to it <button onclick="getMedian(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 5: Filters even numbers <button onclick="filterEvenNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 6: Counts the number of numbers greater than 0 <button onclick="countPositiveNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 7: The numbers are divisible by 5 <button onclick="getDividedByFive(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 8: Replace bad words with asterisks (*) <button onclick="replaceBadWords(prompt('Enter text', 'Are you fucking kidding?'))">start function</button></p>
+  <p>Func 9: Breaks each word into conditional syllables of 3 letters <button onclick="divideByThree(prompt('Enter text', 'Commander'))">start function</button></p>
+
+
+
 	<div class="result"></div>
 	<script src="./js/index.js"></script>
 </body>
