--- a/06-work-with-object/index.html
+++ b/06-work-with-object/index.html
@@ -7,7 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <p>Func 1: Display a list of subjects for a particular student <button onclick="getSubjects(students[0])">start function</button></p>
+  <p>Func 2: Displays an average rating for all subjects <button onclick="getAverageMark(students[0])">start function</button></p>
+  <p>Func 3: General information on the transferred student <button onclick="getStudentInfo(students[0])">start function</button></p>
+  <p>Func 4: Displays student names in alphabetical order <button onclick="getStudentsNames(students)">start function</button></p>
+  <p>Func 5: The best student from the list in terms of average grade. <button onclick="getBestStudent(students)">start function</button></p>
+  <p>Func 6: Сounts how many times a letter is repeated in a word <button onclick="calculateWordLetters(prompt('Enter numbers by space', 'Тест'))">start function</button></p>
   
+  <div class="result"></div>
   <script src="./js/index.js"></script>
 </body>
 </html>
