--- a/05-work-with-array2/index.html
+++ b/05-work-with-array2/index.html
@@ -7,19 +7,20 @@
 	<title>Document</title>
 </head>
 <body>
-  <p>Func 1: An array of random integers <button onclick="getRandomArray(+prompt('Enter a length', '5'),+prompt('Enter a min number', '1'),+prompt('Enter a max number', '9'))">start function</button></p>
-	<p>Func 2: Сalculate mode <button onclick="getModa(prompt('Enter numbers by space', '5 2 5 4 6 9 8 8 12 12 45 8 5'))">start function</button></p>
-  <p>Func 3: Considers the arithmetic mean of all arguments passed to it <button onclick="getAverage(prompt('Enter numbers by space', '1 2 3 4'))">start function</button></p>
-  <p>Func 4: Considers the median of all arguments passed to it <button onclick="getMedian(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
-  <p>Func 5: Filters even numbers <button onclick="filterEvenNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
-  <p>Func 6: Counts the number of numbers greater than 0 <button onclick="countPositiveNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
-  <p>Func 7: The numbers are divisible by 5 <button onclick="getDividedByFive(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
-  <p>Func 8: Replace bad words with asterisks (*) <button onclick="replaceBadWords(prompt('Enter text', 'Are you fucking kidding?'))">start function</button></p>
-  <p>Func 9: Breaks each word into conditional syllables of 3 letters <button onclick="divideByThree(prompt('Enter text', 'Commander'))">start function</button></p>
+  <p>Func 1: An array of random integers <button onclick="runGetRandomArray(+prompt('Enter a length', '5'),+prompt('Enter a min number', '1'),+prompt('Enter a max number', '9'))">start function</button></p>
+	<p>Func 2: Сalculate mode <button onclick="runGetModa(prompt('Enter numbers by space', '5 2 5 4 6 9 8 8 12 12 45 8 5'))">start function</button></p>
+  <p>Func 3: Considers the arithmetic mean of all arguments passed to it <button onclick="runGetAverage(prompt('Enter numbers by space', '1 2 3 4'))">start function</button></p>
+  <p>Func 4: Considers the median of all arguments passed to it <button onclick="runGetMedian(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 5: Filters even numbers <button onclick="runFilterEvenNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 6: Counts the number of numbers greater than 0 <button onclick="runCountPositiveNumbers(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 7: The numbers are divisible by 5 <button onclick="runGetDividedByFive(prompt('Enter numbers by space', '1 2 3 4 5'))">start function</button></p>
+  <p>Func 8: Replace bad words with asterisks (*) <button onclick="runReplaceBadWords(prompt('Enter text', 'Are you fucking kidding?'))">start function</button></p>
+  <p>Func 9: Breaks each word into conditional syllables of 3 letters <button onclick="runDivideByThree(prompt('Enter text', 'Commander'))">start function</button></p>
 
 
 
 	<div class="result"></div>
 	<script src="./js/index.js"></script>
+	<script src="./js/runFunction.js"></script>
 </body>
 </html>
