--- a/10-work-with-event/index.html
+++ b/10-work-with-event/index.html
@@ -9,37 +9,37 @@
 </head>
 <body>
   <div class="sound">
-    <div class="sound-item sound--before">
+    <div class="sound-item sound--before" data-keycode-ru="1081" data-keycode-eng="113">
       <span>Q</span>
       <span>До</span>
       <audio class="sound-do" src="./sound/noty-do.mp3"></audio>
     </div>
-    <div class="sound-item sound--before">
+    <div class="sound-item sound--before" data-keycode-ru="1094" data-keycode-eng="119">
       <span>W</span>
       <span>Ре</span>
       <audio class="sound-re" src="./sound/re.mp3"></audio>
     </div>
-    <div class="sound-item">
+    <div class="sound-item" data-keycode-ru="1091" data-keycode-eng="101">
       <span>E</span>
       <span>Ми</span>
       <audio class="sound-mi" src="./sound/mi.mp3"></audio>
     </div>
-    <div class="sound-item sound--before">
+    <div class="sound-item sound--before" data-keycode-ru="1082" data-keycode-eng="114">
       <span>R</span>
       <span>Фа</span>
      <audio class="sound-fa" src="./sound/fa.mp3"></audio>
     </div>
-    <div class="sound-item sound--before">
+    <div class="sound-item sound--before" data-keycode-ru="1077" data-keycode-eng="116">
       <span>T</span>
       <span>Соль</span>
       <audio class="sound-sol" src="./sound/sol.mp3"></audio>
     </div>
-    <div class="sound-item sound--before">
+    <div class="sound-item sound--before" data-keycode-ru="1085" data-keycode-eng="121">
       <span>Y</span>
       <span>Ля</span>
       <audio class="sound-lja" src="./sound/lja.mp3"></audio>
     </div>
-    <div class="sound-item">
+    <div class="sound-item" data-keycode-ru="1075" data-keycode-eng="117">
       <span>U</span>
       <span>Cи</span>
       <audio class="sound-si" src="./sound/si.mp3"></audio>
